# browseforge-runtime-chromium

./: .gitignore  README.md  SECURITY.md  detector-summary.json  go.mod
.codebase-memory/: artifact.json  graph.db.zst
browser/: chromium-base.json
browser/stealth/: BUILD.gn  persona_resolver.cc  persona_resolver.h  persona_snapshot.cc  persona_snapshot.h  stealth_switches.cc  stealth_switches.h
browser/stealth/public/mojom/: stealth.mojom
contracts/: browseforge-integration.contract.json  runtime-manifest.schema.json  runtime.manifest.json
detectors/: evidence-schema.json  local-sannysoft-dogfood.sanitized.json
docker/: chromium-build.Dockerfile
docs/: anti-detection-matrix.md  architecture.md  browseforge-integration.md  fingerprint-surfaces.md  kb-kg-completeness-assessment.md  release-readiness.md  research-map.md
knowledge/: kb-manifest.json
scripts/: apply_accept_language_header_patch.py  apply_audio_patch.py  apply_canvas_patch.py  apply_feature_parity_patch.py  apply_fonts_patch.py  apply_hardware_patch.py  apply_intl_locale_patch.py  apply_locale_patch.py  apply_platform_patch.py  apply_plugins_patch.py  apply_process_priority_patch.py  apply_screen_patch.py  apply_stealth_scaffold.py  apply_storage_quota_patch.py  apply_style_resolver_patch.py  apply_switch_propagation_patch.py  apply_timezone_patch.py  apply_user_agent_patch.py  apply_webdriver_patch.py  apply_webgl_patch.py  apply_webrtc_patch.py  chromium_docker.py  chromium_native.py  chromium_source.py  detector_harness.py  fingerprint_parity_gates.py  local_connect_proxy.py  patch_ops.py  (+4 more)
(+158 files in other folders)
